fix: complete Gateway native registry cutover
Preserve service-instance schemes for direct Gateway calls, replace the remaining modulith Eureka wiring, and port acceptance fixtures to the native registry. Remove stale cutover imports and reflective tests so the complete build passes its quality gates.

Signed-off-by: Jakub Balhar <jakub.balhar@broadcom.com>